--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "rsort"
-version = "0.1.0"
-description = "An awesome package is coming soon! 🎉"
+version = "0.1.1"
+description = "Sort requirements with ease! 🎉"
 authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
 license = "MIT"
 readme = "README.md"
